--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <tile> Eden Castrejon-Morales Homepage</tile>
-  </head>
-  <body>
-    Hello Welcome to my homepage, Here I will put links to things I have previosly worked on
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <title>My First webpage</title>
+    </head>
+    <body>
+        Hello, World!
+    </body>
 </html>
