--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My First webpage</title>
+        <title>Eden Castrejon Homepage</title>
     </head>
     <body>
-        Hello, World!
+        This is just an example of a website
     </body>
 </html>
