--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Eden Castrejon Homepage</title>
+        <title>E.Castrejon Homepage</title>
     </head>
     <body>
         This is just an example of a website
