--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>E.Castrejon Homepage</title>
     </head>
     <body>
-        This is just an example of a website
+        <h1>just cheking in</h1>
+        <p>This is just an example of a website</p>
     </body>
 </html>
