--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>just cheking in</h1>
         <p>This is just an example of a website</p>
+        <img src=https://www.google.com/url?sa="i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fcalm%2F&psig=AOvVaw3Cjy-411aGcDaoCzBiWN-l&ust=1755788351858000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCMDdobrTmY8DFQAAAAAdAAAAABAE">
     </body>
 </html>
