--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>just cheking in</h1>
         <p>This is just an example of a website</p>
-        <img src="https://img.freepik.com/free-photo/closeup-scarlet-macaw-from-side-view-scarlet-macaw-closeup-head_488145-3540.jpg?semt=ais_hybrid&w=740&q=80">
+        <img src="https://img.freepik.com/free-photo/closeup-scarlet-macaw-from-side-view-scarlet-macaw-closeup-head_488145-3540.jpg?semt=ais_hybrid&w=740&q=80" width=100 height=100>
     </body>
 </html>
