--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+    <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>E.Castrejon Homepage</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--
+This meta tag redirects the user to your main web server after 0
+seconds.
+Update the content URL to your server's IP address or domain name.
+-->
+        <meta http-equiv="refresh" content="0;
+    url=http://YOUR_SERVER_IP_OR_DOMAIN_HERE">
+    <title>Redirecting...</title>
+    <style>
+        body { font-family: sans-serif; text-align: center; padding-top:50px; }
+    </style>
     </head>
     <body>
-        <h1>just cheking in</h1>
-        <p>This is just an example of a website</p>
-        <img src="https://img.freepik.com/free-photo/closeup-scarlet-macaw-from-side-view-scarlet-macaw-closeup-head_488145-3540.jpg?semt=ais_hybrid&w=740&q=80" width=200 height=200>
+        <p>Redirecting...</p>
+        <p>If you are not redirected, <a href="http://YOUR_SERVER_IP_OR_DOMAIN_HERE">click here</a>.</p>
     </body>
 </html>
