--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ This meta tag redirects the user to your main web server after 0
 seconds.
 Update the content URL to your server's IP address or domain name.
 -->
-        <meta http-equiv="refresh" content="0;
-    url=http://YOUR_SERVER_IP_OR_DOMAIN_HERE">
+        <meta http-equiv="refresh" content="0; url=http://129.80.9.78:3000">
     <title>Redirecting...</title>
     <style>
         body { font-family: sans-serif; text-align: center; padding-top:50px; }
@@ -17,6 +16,6 @@ Update the content URL to your server's IP address or domain name.
     </head>
     <body>
         <p>Redirecting...</p>
-        <p>If you are not redirected, <a href="http://YOUR_SERVER_IP_OR_DOMAIN_HERE">click here</a>.</p>
+        <p>If you are not redirected, <a href="http://129.80.9.78:3000">click here</a>.</p>
     </body>
 </html>
